[package]
name = "hype"
version = "2.0.0"
description = "Hype app"
authors = ["Overpowered"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = { version = "2.5", features = ["download_ffmpeg"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "process"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
lazy_static = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

