[package]
name = "hype"
version = "2.0.2"
description = "Hype app"
authors = ["Overpowered"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
serde_json = "1.0.150"

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-http = "2.5.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-updater = "2.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros", "net", "process"] }
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["stream", "json"] }
lazy_static = "1.5.0"
regex = { version = "1.12.4", features = ["unicode-perl"] }
uuid = { version = "1.23.3", features = ["v4"] }
zstd = "0.13.3"
skia-safe = { version = "0.99.0", features = ["textlayout"] }
image = "0.25.5"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

